Fix iframe issue on mobile view

--- a/dir/allways/css/custom.css
+++ b/dir/allways/css/custom.css
@@ -6,6 +6,7 @@
 .a-sidebar-menu-link.w--current:after {content: '';width: 110px;height: 4px;border-radius: 4px;background-color: #16C4CF;position: absolute;top: 50%;left: -64px;transform: translateX(-50%);}
 .a-hero-span:before {content: '';position: absolute;z-index: -1;top: 50%;left: -32px;right: -32px;bottom: 0;background-color: #16C4CF;}
 .a-hero-span.xa-section:before {top: 0;left: -32px;right: 72%;}
+iframe { width: 1px;min-width: 100%;min-height: 1380px;border: 0; }
 @media only screen and (max-width: 1600px) {
   .a-sidebar-menu-link {padding: 14px 0;font-size: 28px;line-height: 32px;}
   .a-booker {margin-right: 0;padding: 16px;}
@@ -32,6 +33,7 @@
   .a-hero-slider-overlay {padding: 16px;}
   .a-hero-slider-pagi {padding-right: 16px;}
   .a-hero-h1 {font-size: 40px;line-height: 48px;}
+  iframe { min-height: 2000px; }
 }
 
 .ui-datepicker { margin-left: 24px!important; }
